syntax = "proto3";
package main;

message WatchRequest {
  oneof request_union {
    WatchCreateRequest create_request = 1;
  }
}

message WatchCreateRequest {
  bytes key = 1;
}
